<resources>
    <string name="app_name">Stock Market Tracker</string>
    <string name="stocks">Stocks</string>
    <string name="favourite">Favourite</string>
    <string name="company_logo">Company Logo</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="find_company_or_ticker">Find company or ticker</string>
    <string name="sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="popular_requests">Popular requests</string>
    <string name="you_ve_searched_for_this">You\'ve searched for this</string>
    <string name="show_more">Show more</string>
    <string name="buy_in_dollar">Buy for $%1$f</string>
</resources>